// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex.Item renders as correct tag 1`] = `
.c0 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<button
  alignSelf="center"
  className="c0"
>
  hi
</button>
`;

exports[`Flex.Item respects alignSelf 1`] = `
.c0 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  alignSelf="center"
  className="c0"
/>
`;
